regression/reference/error/wraperror.h
// wraperror.h
// This file is generated by Shroud nowrite-version. Do not edit.
// Copyright Shroud Project Developers. See LICENSE file for details.
//
// SPDX-License-Identifier: (BSD-3-Clause)
//
/**
 * \file wraperror.h
 * \brief Shroud generated wrapper for error library
 */
// For C users and C++ implementation

#ifndef WRAPERROR_H
#define WRAPERROR_H

// shroud
#include "typeserror.h"

// splicer begin CXX_declarations
// splicer end CXX_declarations

#ifdef __cplusplus
extern "C" {
#endif

// splicer begin C_declarations
// splicer end C_declarations

void ERR_BadFstatements(void);

no-such-type ERR_BadFstatements_bufferify(void);

void ERR_AssumedRank(int *data);

void ERR_AssumedRank_0d_bufferify(int *data);

void ERR_AssumedRank_1d_bufferify(int *data);

void ERR_AssumedRank_2d_bufferify(int *data);

const char * ERR_getConstStringPtrOwnsAllocPattern(void);

void ERR_getConstStringPtrOwnsAllocPattern_bufferify(
    ERR_SHROUD_array *SHT_rv_cdesc,
    ERR_SHROUD_capsule_data *SHT_rv_capsule);

#ifdef __cplusplus
}
#endif

#endif  // WRAPERROR_H
